feat: add initial instructor and teaching assistant data to `_data/people.yml`

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -9,3 +9,6 @@ teaching_assistants:
 
   - name: Lu Yang
     profile_pic: /_images/pp/luyang.jpg
+
+  - name: Jinglun Zhao
+    profile_pic: /_images/pp/jinglunzhao.jpg
