Refactor to template default

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,14 +1,19 @@
 instructors:
-  - name: Yi Wu
-    profile_pic: /_images/pp/yiwu.jpg
-    webpage: https://jxwuyi.weebly.com/
+  - name: Albus Dumbledore
+    profile_pic: /_images/pp/dumbledore.jpg
+    webpage: https://en.wikipedia.org/wiki/Albus_Dumbledore
+  - name: Minerva McGonagall
+    profile_pic: /_images/pp/mcgonagall.jpg
 
 teaching_assistants:
-  - name: Zijian Zhang
-    profile_pic: /_images/pp/zijianzhang.jpg
+  - name: Harry Potter
+    profile_pic: /_images/pp/potter.jpg
+    webpage: https://en.wikipedia.org/wiki/Harry_Potter_(character)
 
-  - name: Lu Yang
-    profile_pic: /_images/pp/luyang.jpg
+  - name: Hermione Granger
+    profile_pic: /_images/pp/granger.jpg
+    webpage: https://en.wikipedia.org/wiki/Hermione_Granger
 
-  - name: Jinglun Zhao
-    profile_pic: /_images/pp/jinglunzhao.jpg
+  - name: Ron Weasley
+    profile_pic: /_images/pp/weasley.jpg
+    webpage: https://en.wikipedia.org/wiki/Ron_Weasley
