--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site settings
-course_name: Deep Learning
-course_description: "Deep Learning 2026"
-course_semester: "2026 Spring"
+course_name: History of Magic
+course_description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare aliquam mattis. Donec hendrerit sollicitudin urna. Aliquam venenatis rutrum velit, at lobortis dui cursus a. Nam varius metus in turpis maximus, ut rhoncus tellus dictum. In aliquam tortor nec mi dapibus, sit amet vehicula dolor auctor."
+course_semester: "Fall 1998"
 
-baseurl: "/DeepLearning2026" # the subpath of your site, e.g. /blog/
-url: "http://openpsi-project.github.io/" # the base hostname & protocol for your site
+baseurl: "/jekyll-course-website-template" # the subpath of your site, e.g. /blog/
+url: "http://kazemnejad.github.io/" # the base hostname & protocol for your site
 
-schoolname: "Tsinghua University"
-schoolurl: "https://www.tsinghua.edu.cn"
-iiisurl: "https://iiis.tsinghua.edu.cn/"
-# twitter_username: username 
+schoolname: "Hogwarts"
+schoolurl: "https://hogwarts.edu"
+twitter_username: username 
 
 address: |
-    Tsinghua University
-    Beijing, China
+    School of Witchcraft and Wizardry
+    Hogwarts
+    Scotland
 
 # Set your Google Analytics tracking ID (set up yours at http://www.google.com/analytics/)
 # google_analytics: UA-XXXXXXXX-X
