--- a/_data/late_policy.yml
+++ b/_data/late_policy.yml
@@ -1,2 +1,4 @@
 policies:
-  - No late submission allowed
+  - You have free 8 late days.
+  - You can use late days for assignments. A late day extends the deadline 24 hours.
+  - Once you have used all 8 late days, the penalty is 10% for each additional late day.
