--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,19 +1,14 @@
 instructors:
-  - name: Albus Dumbledore
-    profile_pic: /_images/pp/dumbledore.jpg
-    webpage: https://en.wikipedia.org/wiki/Albus_Dumbledore
-  - name: Minerva McGonagall
-    profile_pic: /_images/pp/mcgonagall.jpg
+  - name: Yi Wu
+    profile_pic: /_images/pp/yiwu.jpg
+    webpage: https://jxwuyi.weebly.com/
 
 teaching_assistants:
-  - name: Harry Potter
-    profile_pic: /_images/pp/potter.jpg
-    webpage: https://en.wikipedia.org/wiki/Harry_Potter_(character)
+  - name: Jinglun Zhao
+    profile_pic: /_images/pp/jinglunzhao.jpg
 
-  - name: Hermione Granger
-    profile_pic: /_images/pp/granger.jpg
-    webpage: https://en.wikipedia.org/wiki/Hermione_Granger
+  - name: Lu Yang
+    profile_pic: /_images/pp/luyang.jpg
 
-  - name: Ron Weasley
-    profile_pic: /_images/pp/weasley.jpg
-    webpage: https://en.wikipedia.org/wiki/Ron_Weasley
+  - name: Zijian Zhang
+    profile_pic: /_images/pp/zijianzhang.jpg
