Remove bold formatting from late submission policy text

--- a/_data/late_policy.yml
+++ b/_data/late_policy.yml
@@ -1,2 +1,2 @@
 policies:
-  - Strictly **NO** late submissions will be accepted under any circumstances.
+  - Strictly NO late submissions will be accepted under any circumstances.
